Updated unit tests, added logs, and implemented integration tests
Updated unit tests, added logs, and implemented integration tests